# llm-grill-platform

./: .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.with-migrations.yaml  docker-compose.yaml  docker-compose.yml  pyproject.toml  test_model_files.py
.claude/: settings.local.json
.github/scripts/: derive-cycle-key.sh
.github/workflows/: bench-cleanup.yml  bench.yml  ci-orchestrator.yml  ci-site.yml  ci.yml  deploy-site.yml  deploy.yml  publish-catalogs.yml  publish-runner-images.yml
docs/: llm-grill-platform.c4  roadmap.md  schemas.md  testing.md
docs/adr/: 001-automated-benchmark-site.md  001a-infra-terraform-scaleway.md  001b-pipeline-discovery-orchestration.md  001c-data-storage-jsonl.md  001d-frontend-sveltekit.md  001e-error-handling-alerting.md  001f-aggregation-strategy.md  001g-security-secrets-management.md  001h-s3-dedup-layout.md
docs/architecture/: model.c4  views.c4
front/: README.md  package-lock.json  package.json
front/src/: app.css  app.html
front/src/lib/: types.ts  utils.ts
front/src/lib/components/: MetricsTable.svelte
front/src/routes/: +layout.svelte  +page.svelte
front/src/routes/history/: +page.svelte
front/static/data/fixtures/: leaderboard.json
front/static/data/models/: Qwen--Qwen2.5-7B-Instruct.json
infra/: .terraform.lock.hcl  cloud-init.tpl.yaml  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
infra/gpu-vm/: .gitignore  cloud-init.tpl.yaml  main.tf  requirements.txt  variables.tf  versions.tf
infra/orchestrator-vm/: .gitignore  cloud-init.tpl.yaml  main.tf  variables.tf  versions.tf
orchestrator/: .env.example  Dockerfile  Dockerfile.migrations  Makefile  alembic.ini  models.yaml  pyproject.toml
orchestrator/alembic/: env.py
orchestrator/alembic/versions/: 2026_05_15_0940-17bbb767e50b_add_base_schemas.py  2026_05_15_1200-a1b2c3d4e5f6_add_provision_attempts.py  2026_05_15_1300-c3d4e5f6a7b8_add_runs_logs_url.py  2026_06_05_add_run_phase.py  2026_06_09_drop_gpu_count.py  2026_06_16_add_provisioning_started_at.py
orchestrator/scripts/: bootstrap_models.py  dry_run_watcher.py  pending_runs.py  publish_catalogs.py
orchestrator/src/: aggregation.py  auth.py  catalog.py  config.py  db.py  logging_config.py  main.py  models.py  orchestrator.py  routing.py  schemas.py  storage.py  terraform.py
orchestrator/src/controllers/: node_controller.py  result_controller.py  run_controller.py
orchestrator/src/infra/: scaleway.py  terraform.py  watcher.py
orchestrator/src/repositories/: node_repository.py  result_repository.py  run_repository.py
orchestrator/src/routers/: bench.py  leaderboard.py  nodes.py  results.py  runs.py
orchestrator/src/services/: bench_service.py  node_service.py  result_service.py  run_service.py
orchestrator/tests/: conftest.py  test_aggregation.py  test_leaderboard.py  test_models_yaml.py  test_nodes.py  test_results.py  test_runs.py  test_terraform.py  test_watcher.py
orchestrator/tests/api/: test_leaderboard.py  test_nodes.py  test_results.py  test_runs.py
orchestrator/tests/infra/: test_cloud_init_template.py  test_scaleway.py  test_storage.py  test_terraform.py
orchestrator/tests/integration/: test_model_catalog.py
orchestrator/tests/repositories/: test_run_repository.py
orchestrator/tests/services/: test_aggregation.py  test_bench.py  test_catalog.py  test_orchestrator.py  test_watcher.py
pipeline/: __init__.py  aggregate.py  config.yaml  conversations.yaml  run.py  sweep.py
pipeline/adapters/huggingface/: model_discovery_adapter.py
pipeline/adapters/scaleway/: instance_sweeper_adapter.py
pipeline/adapters/storage/: filesystem_results_repository.py
pipeline/adapters/terraform/: infrastructure_adapter.py
pipeline/application/domain/: config.py  types.py
pipeline/application/ports/: infrastructure_port.py  model_discovery_port.py  results_repository_port.py
pipeline/application/services/: aggregation_service.py  discovery_service.py  orchestration_service.py  sweep_service.py
pipeline/tests/: conftest.py  test_aggregation_service.py  test_discovery_service.py  test_orchestration_service.py  test_sweep_service.py
results/: README.md
results/fixtures/2026-04-14/Qwen--Qwen2.5-7B-Instruct/: sglang.jsonl  vllm.jsonl
results/fixtures/2026-04-14/meta-llama--Llama-3.1-8B-Instruct/: llamacpp.jsonl  sglang.jsonl  vllm.jsonl
runner/: Dockerfile  runner.sh
scenarios/: ramp.yaml
site/: .env.example  .gitignore  Makefile  package-lock.json  package.json  svelte.config.js  vitest.config.ts
site/scripts/: build-data.js  gen-sample.mjs
site/src/: app.css  app.html
site/src/lib/: config.ts  data.ts  metrics.ts  scales.ts  theme.ts  types.ts  utils.ts
site/src/lib/components/: AxisBar.svelte  (+8 more)
site/src/routes/: +layout.svelte  +layout.ts  +page.svelte  +page.ts
site/static/: CNAME
site/static/sample/: engines.json  leaderboard.json  models.json  scenarios.json
site/tests/: data.test.ts
terraform/: cloud-init.tpl.yaml  main.tf  outputs.tf  variables.tf
(+25 files in other folders)
