[project]
name = "llm-grill-nightly-pipeline"
version = "0.1.0"
description = "Nightly benchmark pipeline for llm-grill (discovery, orchestration, aggregation)."
requires-python = ">=3.11"
dependencies = [
    "llm-grill",
    "huggingface_hub>=0.23",
    "pyyaml>=6.0",
    "scaleway>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipeline"]

[tool.pytest.ini_options]
testpaths = ["pipeline/tests"]
asyncio_mode = "auto"
