[project]
name = "llm-grill-orchestrator"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135",
    "uvicorn[standard]>=0.44",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.31",
    "alembic>=1.18",
    "psycopg2-binary>=2.9",
    "pydantic-settings>=2.13",
    "boto3>=1.42",
    "llm-grill>=0.1.3",
    "huggingface-hub>=1.10",
]

[dependency-groups]
dev = [
    "ty>=0.0.34",
    "ruff>=0.15",
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
    "pytest-mock>=3.15",
    "httpx>=0.18",
    "pytest-cov>=7.1",
    "aiosqlite>=0.22",
]

[tool.uv]
exclude-newer = "7 days"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: tests that call external services (deselect with -m 'not integration')",
]


[tool.ruff]
exclude = [
    "alembic/versions"
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.12
target-version = "py312"

# Respect `.gitignore` files
respect-gitignore = true

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F", "I"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
